# liburing-cpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/liburing-cpp/: future_probe.h  io_uring.h  io_uring_callback.h  io_uring_cqe.h  io_uring_sqe.h
include/service/: service.h  task.h
include/service/helper/: acceptor.h  binder.h  closer.h  listener.h  reader.h  timer.h  writer.h
profiles/: clang-debug  clang-release
src/: CMakeLists.txt  service.cpp
src/helper/: acceptor.cpp  timer.cpp
src/liburing-cpp/: CMakeLists.txt  future_probe.cpp  io_uring.cpp  io_uring_cqe.cpp  io_uring_sqe.cpp
tests/: CMakeLists.txt
tests/benchmark_uring/: CMakeLists.txt  test_service.cpp
tests/unitest/: CMakeLists.txt  test_service.cpp
